# guvcmjpg

./: .gitmodules  CMakeLists.txt  README.md  bootstrap.sh
cmake/: CompilerFlags.cmake
guvcmjpg/: config.c  gui.c  gui_gtk3.c  gui_gtk3_callbacks.c  gui_gtk3_callbacks.h  gui_gtk3_menu.c  gui_gtk3_videoctrls.c  guvcmjpg.c  guvcview.c  options.c  video_capture.c  video_capture.h
gview_encoder/: encoder.c  encoder.h  file_io.h  gviewencoder.h  matroska.c  muxer.c  stream_io.c
gview_render/: gviewrender.h  render.c  render_fx.c  render_sdl1.c
gview_v4l2core/: colorspaces.c  control_profile.c  core_time.c  core_time.h  frame_decoder.c  frame_decoder.h  gviewv4l2core.h  jpeg_decoder.c  save_image_bmp.c  save_image_jpeg.c  soft_autofocus.c  uvc_h264.c  v4l2_controls.c  v4l2_core.c  v4l2_core.h  v4l2_devices.c  v4l2_formats.c
include/: config.h  gview.h
